# files_stats

./: CMakeLists.txt  Footer.qml  Main.qml  README.md  fileparser.cpp  fileparser.h  filestatscontroller.cpp  filestatscontroller.h  graph.cpp  graph.h  main.cpp  pimpl.h  worker.cpp  worker.h
res/: a.txt  book.txt  lorem_ipsum.txt  test_data.txt
